--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -18,6 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-input-mask": "^2.0.4",
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.1.3",
     "react-scroll": "^1.9.0",
